[tool.poetry]
name = "forecast"
version = "0.4.1"
description = "Python wrapper for the Forecast.app API."
authors = ["Joe Joiner <2454320+joejoinerr@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
